--- a/index.html
+++ b/index.html
@@ -80,7 +80,11 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>Hello! I’m Anna Abrahamyan, and this is my personal website. I use this space to share my work, projects, and ideas!</p>
+    <p>Hello! I’m Anna Abrahamyan and welcome to my website! I use this space to share my work, projects, and ideas! I’m a Machine Learning & Data Science 
+      Specialist with a strong academic foundation, holding a BSc in Data Science and an MSc in Machine Learning & Data Mining. Over the past three years,
+      I’ve worked across diverse domains including Natural Language Processing (NLP), recommendation systems, predictive modeling, optimization, and data-driven 
+      product development. I'm passionate about getting impactful insights from messy datasets. I enjoy building intelligent systems that not only perform well 
+      in theory but deliver measurable value in production environments. You can see some of my projects here.</p>
   </section>
 
   <section id="projects">
@@ -88,20 +92,20 @@
     <div class="projects">
       <div class="card">
         <img src="https://via.placeholder.com/400x200" alt="Project 1">
-        <h3>Project One</h3>
-        <p>Short description of your project. You can link it below.</p>
+        <h3>Similar Company Recommender (Healthcare Investment Firm)</h3>
+        <p>An NLP-powered system that finds similar companies using sentence embeddings and FAISS-based similarity search. Built for a healthcare investment firm to enhance deal discovery.</p>
         <a href="#">View Project</a>
       </div>
       <div class="card">
         <img src="https://via.placeholder.com/400x200" alt="Project 2">
-        <h3>Project Two</h3>
-        <p>Another project with a description and a link.</p>
+        <h3>Fair Job Recommendation System</h3>
+        <p>A fairness-aware recommender using metric learning and bias-mitigation techniques to promote equitable job visibility without sacrificing accuracy.</p>
         <a href="#">View Project</a>
       </div>
       <div class="card">
         <img src="https://via.placeholder.com/400x200" alt="Project 3">
-        <h3>Project Three</h3>
-        <p>Describe your project here.</p>
+        <h3>Product Repurchase Prediction (Carrefour)</h3>
+        <p>Predicted customer repurchase behavior from transaction data to optimize cross-selling strategies and retention efforts.</p>
         <a href="#">View Project</a>
       </div>
     </div>
@@ -113,7 +117,7 @@
   </section>
 
   <footer>
-    <p>© 2025 Your Name — Built with ❤️</p>
+    <p>© 2025 Anna Abrahamyan — Built with ❤️</p>
   </footer>
 </body>
 </html>
