--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
         <img src="https://via.placeholder.com/400x200" alt="Project 1">
         <h3>Similar Company Recommender (Healthcare Investment Firm)</h3>
         <p>An NLP-powered system that finds similar companies using sentence embeddings and FAISS-based similarity search. Built for a healthcare investment firm to enhance deal discovery.</p>
-        <a href="#">View Project</a>
+        <a href="https://github.com/justacupofhottea/Company-Recommendation-in-Private-Equity-A-Similarity-Based-Approach-for-the-Healthcare-Sector/blob/main/README.md">View Project</a>
       </div>
       <div class="card">
         <img src="https://via.placeholder.com/400x200" alt="Project 2">
         <h3>Fair Job Recommendation System</h3>
         <p>A fairness-aware recommender using metric learning and bias-mitigation techniques to promote equitable job visibility without sacrificing accuracy.</p>
-        <a href="#">View Project</a>
+        <a href="https://github.com/justacupofhottea/JobRecSystem">View Project</a>
       </div>
       <div class="card">
         <img src="https://via.placeholder.com/400x200" alt="Project 3">
